--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-node": "^0.1.0",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.16.0",
-    "connect-mongodb-session": "^1.3.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
-    "express": "~4.14.1",
+    "body-parser": "^1.18.2",
+    "connect-mongodb-session": "^2.0.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
+    "express": "^4.16.3",
     "express-flash": "0.0.2",
-    "express-handlebars": "~3.0.0",
-    "express-session": "^1.15.1",
-    "mongodb": "^2.2.24",
-    "mongoose": "^4.8.6",
-    "morgan": "~1.7.0",
-    "passport": "^0.3.2",
+    "express-session": "^1.15.6",
+    "hbs": "^4.0.1",
+    "mongoose": "^5.0.14",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "^2.5.0"
   }
 }
